@@ -54,6 +54,14 @@ Why:
  support compressing new .deb files with that format, although unpacking
  will be kept being supported to handle existing compressed files.
 
+What: --control-path (dpkg-query option)
+Status: deprecated
+When: 1.18.x
+Warning: man page
+ This was a semi-public interface now superceded by --control-list and
+ --control-show, which are a better interface as they do not rely on any
+ specific database layout.
+
 History of feature removals
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
