@@ -32,6 +32,8 @@ dpkg (1.16.5) UNRELEASED; urgency=low
   * Switch source compression to xz.
   * Detect ar header fields truncation due to too long member names or too
     large member sizes. Closes: #678933
+  * Add new dpkg-query --control-list and --control-show commands, which
+    replace the now deprecated --control-path.
 
   [ Updated dpkg translations ]
   * Swedish (Peter Krefting).
